# brasileirao-guessr

./: .gitignore  README.md
client/: package-lock.json  package.json
client/src/: actions.ts  utis.ts
client/src/app/: actions.ts  bus.ts  globals.css  layout.tsx  page.tsx  storage.ts
client/src/app/components/: answer-form.tsx  daily-game-box.tsx  game-end.tsx  game-over.tsx  game.tsx  head-buttons.tsx  next-game.tsx  search-input.tsx  tip-card.tsx
client/src/app/components/day-game-card/: past-game-card.tsx  today-game-card.tsx
client/src/app/components/game/: answer-form.tsx  game.tsx  past-game.tsx  search-input.tsx  tip-card.tsx  today-game.tsx
client/src/app/components/icons/: heart.tsx  question-mark-circle.tsx
client/src/app/help/: page.tsx
client/src/app/hooks/: use-storage.ts
client/src/app/info/: page.tsx
client/src/app/previous-games/: page.tsx
client/src/app/previous-games/[id]/: page.tsx
client/src/app/previous-games/components/: grid-card.tsx
client/src/app/support-me/: clipboard-button.tsx  page.tsx
client/src/components/: head-buttons.tsx
client/src/components/day-game-card/: day-game-card.tsx  past-game-card.tsx  today-game-card.tsx
client/src/components/game/: answer-form.tsx  button-reload-page.tsx  game-end.tsx  game.tsx  past-game.tsx  search-input.tsx  share-button.tsx  tip-card.tsx  today-game.tsx
client/src/components/icons/: information-circle.tsx  x-mark.tsx
client/src/hooks/: use-storage.ts
lambda/: .env.sample  Dockerfile  auth_google.py  constants.py  function.py  pyproject.toml  spreadsheet.py
