[tool.black]
line-length = 80

[tool.poetry]
name = "brasileirao-guessr"
version = "0.1.0"
description = ""
authors = ["Arthur Oliveira <arthurolvmorais@gmail.com>"]
readme = "README.md"
packages = [{include = "brasileirao_guessr"}]

[tool.poetry.dependencies]
python = "^3.10"
google-auth = "^2.25"
requests = "^2.31"
boto3 = "^1.34"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"